cluster/apps/glance/httproute.yaml
# File: glance/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
  namespace: glance
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - "dash.ejsadiarin.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: glance
          port: 8080
